# pydata

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README.qmd  _quarto.yml  coverage.json  pyproject.toml
.github/workflows/: blank.yml  coverage.yml  github-ci.yml  quarto-publish.yml  test.yml
docs/: robots.txt  search.json  sitemap.xml
pydata/: __init__.py  drdata.py  lda.py  ldata.py  pca.py  pydata.py  rnadata.py  tsne.py  umap.py
tests/: test_lda.py  test_ldata.py  test_pca.py  test_pydata.py  test_rnadata.py  test_tsne.py  test_umap.py
tests/snapshots/test_lda/test_analyse/: lda_data.txt  lda_print.txt
tests/snapshots/test_lda/test_annotation/: annotation.txt
tests/snapshots/test_lda/test_lda_generation/: lda.txt
tests/snapshots/test_ldata/test_annotation/: annotation.txt
tests/snapshots/test_ldata/test_concat/: concat_ldata.txt
tests/snapshots/test_ldata/test_description/: description.txt
tests/snapshots/test_ldata/test_example_ldata/: example_ldata.txt
tests/snapshots/test_ldata/test_ldata_generation/: ldata.txt
tests/snapshots/test_ldata/test_subset/: subset_ldata.txt
tests/snapshots/test_ldata/test_transpose/: transpose_ldata.txt
tests/snapshots/test_pca/test_analyse/: pca_data.txt  pca_print.txt
tests/snapshots/test_pca/test_annotation/: annotation.txt
tests/snapshots/test_pca/test_pca_generation/: pca.txt
tests/snapshots/test_pydata/test_computePCA/: pydata_pca_data.txt
tests/snapshots/test_pydata/test_compute_pca/: pydata_pca_data.txt  pydata_pca_print.txt
tests/snapshots/test_pydata/test_data/: data.txt
(+16 files in other folders)
