[tool.poetry]
name = "pydata"
version = "0.1.0"
description = ""
authors = ["Jack Sleight <jacksleight@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-snapshot = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
