[tool.poetry]
name = "pydata"
version = "0.0.0.9001"
description = ""
authors = ["Jack Sleight <jacksleight@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
umap-learn = "^0.5.5"
plotly-express = "^0.4.1"
rnanorm = "^2.1.0"
pydeseq2 = "^0.4.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-snapshot = "^0.9.0"


[tool.poetry.group.lint.dependencies]
black = "^23.12.0"


[tool.poetry.group.coverage.dependencies]
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
